## Process this file with automake to produce Makefile.in

noinst_HEADERS = uq1D1DFunction.h \
	uq2dArrayOfStuff.h \
	uqArrayOfOneDGrids.h \
	uqArrayOfOneDTables.h \
	uqArrayOfSequences.h \
	uqAsciiTable.h \
	uqChainStatisticalOptions.h \
	uqDefines.h \
	uqEnvironment.h \
	uqFft.h \
	uqGslMatrix.h \
	uqGslOdeSolver.h \
	uqGslVector.h \
	uqInstantiateIntersection.h \
	uqMatrix.h \
	uqMiscellaneous.h \
	uqOneDGrid.h \
	uqScalarFunction.h \
	uqScalarSequence.h \
	uqSequenceOfVectors.h \
	uqTrilinosMatrix.h \
	uqTrilinosVector.h \
	uqVectorFunction.h \
	uqVector.h \
	uqVectorSequence.h \
	uqVectorSet.h \
	uqVectorSpace.h \
	uqVectorSubset.h 
